# ml_project

./: .gitignore  app.py  dados_RN.csv  dados_comunidade.csv  hello.py  label_encoder.pkl  modelo_phishing.h5  modelo_phishing.pkl  novos_dados.csv  phishing.ipynb  pyproject.toml  text_processing.ipynb  trata_rn.py  treina_rn.py  user_contributions.csv  w2v_model.pkl
app/: arvore_decisao.ipynb  svm.ipynb  text_processing.ipynb
