[project]
name = "zapcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.26.0",
    "praw>=7.8.1",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "selenium>=4.31.0",
    "spacy>=3.8.5",
]
